<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_aman_pratap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bharat.firstproject.AmanPratap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/photo_aman" />

        <TextView
            style="@style/values"
            android:layout_gravity="center_horizontal"
            android:text="@string/aman_pratap"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/values"
                android:text="@string/intro"
                android:textSize="16sp"/>

            <TextView
                style="@style/values"
                android:text="@string/aman_intro"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/values"
                android:paddingRight="8dp"
                android:text="@string/schooling" />

            <TextView
                style="@style/values"
                android:text="@string/aman_schooling"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/values"
                android:paddingRight="8dp"
                android:text="@string/living" />

            <TextView
                style="@style/values"
                android:text="@string/aman_living"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/values"
                android:paddingRight="8dp"
                android:text="@string/hometown" />

            <TextView
                style="@style/values"
                android:text="@string/aman_hometown"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/values"
                android:paddingRight="8dp"
                android:text="@string/dob" />

            <TextView
                style="@style/values"
                android:text="@string/aman_dob"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/values"
                android:paddingRight="8dp"
                android:id="@+id/mob"
                android:text="@string/mob_number"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toRightOf="@id/mob">

                <TextView
                    style="@style/values"
                    android:text="@string/aman_ph1" />

                <TextView
                    style="@style/values"
                    android:text="@string/aman_ph2" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/values"
                android:paddingRight="8dp"
                android:id="@+id/mail"
                android:text="@string/email"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toRightOf="@id/mail">

                <TextView
                    style="@style/values"
                    android:text="@string/aman_mail2" />

                <TextView
                    style="@style/values"
                    android:text="@string/aman_mail1" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
